# claude-knowledge

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
claude_knowledge/: __init__.py  _config.py  _embedding.py  _maintenance.py  _relationships.py  _sync.py  _tracking.py  _versioning.py  cli.py  code_extractor.py  code_parser.py  completions.py  git_extractor.py  git_parser.py  interactive.py  knowledge_manager.py  output.py  session_extractor.py  session_parser.py  utils.py
docs/: ROADMAP.md
skill/: SKILL.md
tests/: __init__.py  conftest.py  test_code_extractor.py  test_code_parser.py  test_completions.py  test_git_extractor.py  test_git_parser.py  test_interactive.py  test_knowledge_manager.py  test_output.py  test_relationships.py  test_session_extractor.py  test_session_parser.py  test_sync.py  test_versioning.py
